@@ -1,9 +1,11 @@
 package codekoi.apiserver.domain.code.comment.service;
 
 import codekoi.apiserver.domain.code.comment.domain.CodeReviewComment;
+import codekoi.apiserver.domain.code.comment.dto.CodeCommentDetailDto;
 import codekoi.apiserver.domain.code.comment.repository.CodeReviewCommentRepository;
-import codekoi.apiserver.domain.code.review.dto.UserCodeCommentDto;
-import codekoi.apiserver.domain.koi.domain.KoiType;
+import codekoi.apiserver.domain.code.review.domain.CodeReview;
+import codekoi.apiserver.domain.code.comment.dto.UserCodeCommentDto;
+import codekoi.apiserver.domain.code.review.repository.CodeReviewRepository;
 import codekoi.apiserver.domain.koi.history.domain.KoiHistory;
 import codekoi.apiserver.domain.koi.history.repository.KoiHistoryRepository;
 import codekoi.apiserver.domain.user.domain.User;
@@ -13,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,9 +25,10 @@ public class CodeCommentQuery {
     private final UserRepository userRepository;
     private final CodeReviewCommentRepository codeReviewCommentRepository;
     private final KoiHistoryRepository koiHistoryRepository;
+    private final CodeReviewRepository codeReviewRepository;
 
     public List<UserCodeCommentDto> getUserComments(Long userId) {
-        final User user = userRepository.findUserById(userId);
+        final User user = userRepository.findByUserId(userId);
         final List<CodeReviewComment> comments = codeReviewCommentRepository.findByUser(user.getId());
 
         final List<KoiHistory> koiHistories = koiHistoryRepository.findUserCommentKoiHistory(
@@ -35,12 +37,19 @@ public class CodeCommentQuery {
                         .collect(Collectors.toList())
         );
 
-        final Map<Long, KoiType> koiMap = koiHistories.stream()
-                .collect(Collectors.toMap(koiHistory -> koiHistory.getCodeReviewComment().getId(),
-                        KoiHistory::getKoiType));
+        return UserCodeCommentDto.listOf(user, comments, koiHistories);
+    }
 
-        return comments.stream()
-                .map(c -> UserCodeCommentDto.of(user, c, koiMap.get(c.getId())))
-                .collect(Collectors.toList());
+    public List<CodeCommentDetailDto> getCommentsOnReview(Long sessionUserId, Long reviewId) {
+        final CodeReview codeReview = codeReviewRepository.findByCodeReviewId(reviewId);
+        final List<CodeReviewComment> comments = codeReviewCommentRepository.findByCodeReviewId(codeReview.getId());
+
+        final List<Long> commentIds = comments.stream()
+                .map(CodeReviewComment::getId)
+                .toList();
+
+        final List<KoiHistory> koiHistories = koiHistoryRepository.findUserCommentKoiHistory(commentIds);
+
+        return CodeCommentDetailDto.listOf(comments, koiHistories, sessionUserId);
     }
 }
